objects/Pending_Delegate__c.object
<CustomObject>
    <description>Object used to process delegates imported from Excel and suggest matches etc.</description>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipName>Pending_Delegates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <label>Import Delegate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Company_Name__c</columns>
        <columns>Job_Title__c</columns>
        <columns>Email__c</columns>
        <columns>Mobile_Phone__c</columns>
        <columns>Event__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Pending Delegate Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Import Delegates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>